# Engine

./: Cargo.toml  DECISIONS.md  OBJETIVOS.md  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/application/: Cargo.toml
core/src/application/src/: app.rs  frames.rs
core/src/details/: graphics  passos.txt
core/src/graphics/: Cargo.toml
core/src/graphics/backend/: backend_trait.rs
core/src/graphics/backend/wgpu/: backend_api.rs  camera.rs  mesh_cache.rs  pipeline_cache.rs  vertex_convert.rs
core/src/graphics/render/: draw_item.rs  framegraph.rs  pass.rs  renderer.rs
core/src/graphics/resources/: mod.rs  shader.rs
core/src/graphics/resources/data/: material.rs  texture.rs
core/src/graphics/resources/desc/: pipeline.rs
core/src/graphics/resources/registers/: camera.rs  manager.rs  mesh.rs  mod.rs  pipeline.rs  render_target.rs  texture.rs
core/src/graphics/resources/shaders/: camera_2d.wgsl
core/src/graphics/scene/: camera.rs
core/src/graphics/types/: id.rs  mod.rs
engine_core/: Cargo.toml
engine_core/src/: app.rs  frames.rs  lib.rs  runtime.rs
examples/: Cargo.toml
graphics/: Cargo.toml
graphics/src/: lib.rs
graphics/src/backend/: backend_trait.rs  frame_ctx.rs  mod.rs
graphics/src/backend/wgpu/: backend_api.rs  camera.rs  mesh_cache.rs  mod.rs  pipeline_cache.rs  vertex_convert.rs
graphics/src/render/: draw_item.rs  framegraph.rs  mod.rs  pass.rs  renderer.rs
graphics/src/resources/: mod.rs  uniform_blocks.rs
graphics/src/resources/data/: material.rs  mesh.rs  mod.rs
graphics/src/scene/: camera.rs
(+9 files in other folders)
