[lib]
name = "graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
# API Gráfica moderna
wgpu = "27.0.1" 

# Para cálculos de matrizes e vetores (biblioteca padrão em Rust)
cgmath = "0.18"

# O bytemuck é essencialmente usado em engines gráficas como a sua (usando wgpu)
# porque ele fornece traits (Pod e Zeroable) que garantem que suas estruturas de dados (como os vértices)
# possam ser enviadas diretamente para a memória da GPU com segurança.
bytemuck = { version = "1.0", features = ["derive"] }

# Utilitário para facilitar o uso de wgpu em contextos síncronos
pollster = "0.3.0"

# async runtime, necessário para wgpu
tokio = { version = "1", features = ["full"] } # Ou apenas as features 'time' e 'macros'

# relacionado a GUI (interface gráfica do usuário)
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
